fix: text spacing adjustments

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,5 +1,5 @@
 .about {
-  margin-top: 40vh;
+  margin-top: 45vh;
 }
 
 .about-content {
